refactoring: 거래목록 안쓰는 것들 제거